# docs

./: .editorconfig  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  IDE_SETUP.md  Makefile  README.md  docs.json  handoffs.ipynb  handoffs.py  hello.html  lint-mdx.sh  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  copilot-instructions.md  labeler.yml  langchain.instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-langchain.yml  02-langgraph.yml  03-langsmith.yml  04-reference-docs.yml  06-reference-docs.yml
.github/instructions/: reference-docs.instructions.md
.github/scripts/: packages_yml_get_downloads.py
.github/workflows/: _lint.yml  _test.yml  check-links.yml  ci.yml  create-preview-branch.yml  labeler.yml  publish.yml  test-build-docs.yml  update-package-downloads.yml
pipeline/: cli.py  constants.py
pipeline/commands/: dev.py  snippets.py
pipeline/core/: builder.py  snippets.py  watcher.py
pipeline/preprocessors/: constants_map.py  handle_auto_links.py  handle_constants.py  link_map.py  link_map_generated.py  markdown_preprocessor.py
pipeline/tools/: code_linter.py  highlights.py  partner_pkg_table.py
reference/: .gitignore  README.md  middleware.test.ts  middleware.ts  package.json  packages.yml  pnpm-lock.yaml  tsconfig.json  vercel.json
reference/javascript/: .eslintignore  .eslintrc.cjs  .gitignore  (+7 more)
scripts/: generate_link_maps.py  update_mdx.py
snippets/python/: .gitignore  Makefile  pyproject.toml
src/: docs.json  hide-sidebar.css  hide-sidebar.js  hide-version-picker.js  index.mdx  style.css  use-these-docs.mdx
(+2952 files in other folders)
